--- a/style.css
+++ b/style.css
@@ -5,25 +5,57 @@ body {
 
 
 .player {
-	background-color: rgb(225, 225, 225);
+	background-color: #FFFFFF;
 	width: 70%;
 	border-radius: 10px;
-	border: 1px solid rgb(244, 141, 100);
 	margin: 0 auto;
 	padding: 10px 10px
-	
+}
+
+button {
+	border-radius: 40px;
+	padding: 10px 10px
+}
+
+#arizona{
+	background-color: rgb(215, 13, 50);
 }
 
 #header {
 	width: 100%;
 	min-height: 30px;
-	background-color: rgb(53, 43, 73);
-	color: rgb(219, 219, 219);
 	text-align: center;
-	border-radius: 0;
-	border: none;
 }
 
-table, th, td {
-    border: 1px solid black;
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+th, td {
+    padding: 8px;
+    text-align: center;
+    border-bottom: 1px solid #ddd;
+}
+
+th {
+    background-color: rgb(235, 235, 255);
+}
+
+tr:hover {
+	background-color:#f5f5f5;
+}
+
+href {
+	color: white;
+}
+
+#lastimg {
+	display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#credit {
+	text-align: center;
 }
