--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@ body {
 	background-color: #FFFFFF;
 }
 
-
 .player {
 	background-color: #FFFFFF;
 	width: 70%;
@@ -12,13 +11,8 @@ body {
 	padding: 10px 10px
 }
 
-button {
-	border-radius: 40px;
-	padding: 10px 10px
-}
-
-#arizona{
-	background-color: rgb(215, 13, 50);
+h2 {
+	border-radius: 10px;
 }
 
 #header {
@@ -46,16 +40,94 @@ tr:hover {
 	background-color:#f5f5f5;
 }
 
-href {
-	color: white;
-}
-
-#lastimg {
+img {
 	display: block;
     margin-left: auto;
     margin-right: auto;
+    width: 50%;
+    height: 50%;
 }
 
 #credit {
 	text-align: center;
+}
+
+a:link {
+	border: 2px solid black;
+    background-color: white;
+    color: white;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 30px;
+    text-decoration: none;
+    text-align: center;
+    display: inline-block;
+}
+
+a:visited {
+    color: white;
+}
+
+a:hover {
+    color: black;
+}
+
+a:active {
+    color: black;
+}
+
+#ARI {
+	background-color: rgb(205, 0, 0);
+	border: 2px solid rgb(215, 13, 50);
+}
+
+#LAK, #BOS {
+	background-color: black;
+	border: 2px solid black;
+}
+
+#CBJ, #WPG {
+	background-color: rgb(0, 0, 175);
+	border: 2px solid rgb(0, 0, 175);
+}
+
+#TOR {
+	background-color: rgb(0, 0, 215);
+	border: 2px solid rgb(0, 0, 215);
+}
+
+#WSH {
+	background-color: rgb(215, 0, 0);
+	border: 2px solid rgb(215, 0, 0);
+}
+
+#TBL {
+	background-color: #00205B;
+	border: 2px solid #00205B;
+}
+
+#VGK {
+	background-color: rgb(100, 100, 100);
+	border: 2px solid rgb(100, 100, 100);
+}
+
+#NSH {
+	background-color: #FFB81C;
+	border: 2px solid #FFB81C;
+}
+
+#ARI:hover, #LAK:hover, #CBJ:hover, #TOR:hover, #WSH:hover, #BOS:hover,
+	#WPG:hover, #TBL:hover, #VGK:hover, #NSH:hover {
+	background-color: white;
+}
+
+#show {
+	border: none;
+    color: black;
+    padding: 0px 0px;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 0px;
+    text-decoration: underline;
 }
