--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ a:active {
 	border: 2px solid black;
 }
 
-#CBJ, #WPG {
+#CBJ, #TBL {
 	background-color: rgb(0, 0, 175);
 	border: 2px solid rgb(0, 0, 175);
 }
@@ -104,7 +104,7 @@ a:active {
 	border: 2px solid rgb(215, 0, 0);
 }
 
-#TBL {
+#WPG {
 	background-color: #00205B;
 	border: 2px solid #00205B;
 }
@@ -136,8 +136,10 @@ a:active {
 
 .right {
 	float: right;
+	padding-left: 10px;
 }
 
 .left {
 	float: left;
+	padding-right: 10px;
 }
